--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,38 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+#title{
+  text-align: left;
+  float: left;
+}
+#midiimage{
+  width: 100%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.header{
+  background: rgb(100, 146, 131);
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 34px;
+  margin-left: -8px;
+  margin-right: -8px;
+  margin-top: -8px;
+  height: 150px;
+  text-align: center;
+}
+
+.left {
+  float: left;
+  background-color: #111;
+}
+
+.right {
+  float: right;
+  background-color: red;
+}
+
+.contentsplit {
+  width: 50%;
+}
+
+.contententry {
+  width: 100%;
+  overflow: auto;
 }
