--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   margin-left: -8px;
   margin-right: -8px;
 }
-
 #profileimage{
   width: 250px;
   position: absolute;
@@ -21,6 +20,11 @@
   top: 55%;
   left: 5%;
   font-size: 18px;
+}
+#headerlinks{
+  margin-right: 35%;
+  margin-top: 2.5%;
+  float: right;
 }
 
 .header{
@@ -94,3 +98,7 @@
   font-family: roboto medium;
 }
 
+.headerlink{
+  width: 55px;
+  margin-right: 10px;
+}
