--- a/src/index.css
+++ b/src/index.css
@@ -60,11 +60,12 @@
 .headerlink{
   margin-top: 75px;
   width: 55px;
-  margin-right: 10px;
+  margin-right: 15px;
   transform: translate(0%, -50%);
 }
 .fillwidth{
   width: 100%;
+  margin-bottom: -4px;
 }
 /*=====Responsive design======*/
 @media screen and (max-width: 1325px) { 
@@ -94,7 +95,7 @@
   text-align: center;
   color: white; 
   margin-top: -24px;
-  position: relative; 
+  position: relative;
 }
 
 .contentsplit {
@@ -103,6 +104,7 @@
 .contententry {
   width: 100%;
   overflow: auto;
+  margin-bottom: 
 }
 .textcentered40 {
   position: absolute;
