--- a/src/index.css
+++ b/src/index.css
@@ -21,9 +21,14 @@
 }
 #welcometext {
   position: absolute;
-  top: 25%;
+  top: 315px;
   left: 50%;
+  width: 80%;
   transform: translate(-50%, -50%);
+  pointer-events:none;
+}
+#introsection {
+  margin-top: 300px;
 }
 .lightfont {
   font-family: roboto light;
@@ -36,15 +41,24 @@
 .mediumfont{
   font-family: roboto medium;
 }
+.fancyfont{
+  font-family: Garamond;
+}
 .left {
   float: left;
 }
 .right {
   float: right;
 }
-
+.largertext{
+  font-size: 62px;
+  margin-bottom: 25px;
+}
 .largetext{
   font-size: 48px;
+}
+.mediumtext{
+  font-size: 28px;
 }
 .smalltext{
   font-size: 18px;
@@ -62,20 +76,30 @@
   width: 55px;
   margin-right: 15px;
   transform: translate(0%, -50%);
+  
 }
 .fillwidth{
   width: 100%;
   margin-bottom: -4px;
 }
+
+.footer{
+  background: rgb(99, 99, 99);
+  height: 80px;
+  text-align: center;
+  color: white; 
+  margin-top: -24px;
+  position: relative;
+}
 /*=====Responsive design======*/
-@media screen and (max-width: 1325px) { 
+@media screen and (max-width: 1355px) { 
   #headerlinks {margin-left: 400px;}  
   .headerlink { margin-top: 20px;}
   #header{height: 218px;}
 }
 @media screen and (max-width: 1100px) { 
   #profileimage { display: none; }
-  #headertext{position: absolute;left:50%;transform: translate(-50%, 0%);width: 100%;margin-left: 0px; margin-right: 0px;}
+  #headertext{position: absolute;left:50%;transform: translate(-50%, 0%);width: 95%;margin-left: 0px; margin-right: 0px;}
   #headerlinks{position: absolute; margin-top: 160px; left:50%; margin-left: 0px;transform: translate(-50%, 0%);}
 }
 @media screen and (max-width: 335px) { 
@@ -89,14 +113,7 @@
 
 
 
-.footer{
-  background: rgb(99, 99, 99);
-  height: 80px;
-  text-align: center;
-  color: white; 
-  margin-top: -24px;
-  position: relative;
-}
+
 
 .contentsplit {
   width: 50%;
