--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ body{
 #introsection {
   margin-top: 300px;
 }
+#dots{
+  position: absolute;
+  text-align: center;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 .blackbar{
   height: 4px;
   background-color: black;
@@ -168,6 +175,19 @@ body{
   top: -30px;
 }
 
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  background-color: #ff0000;
+}
 a:link {
   color: red; 
   background-color: transparent; 
@@ -203,7 +223,7 @@ a:visited {
 }
 @media screen and (max-width: 534px) { 
   .showcaseimage {margin-left: -200px}
-  .largertext{font-size: 41px;}
+  .largertext{font-size: 37px;}
   .largetext{font-size: 32px;}
   .mediumtext{font-size: 18px;}
   .smalltext{font-size: 12px;}
@@ -212,7 +232,7 @@ a:visited {
   #header{height: 190px;}
   #welcometext {top: 410px;}
   .showcasetext{width: 70%;}
-  .showcasetext{top: 75px;}
+  .showcasetext{top: 55px;}
   .showcasetitle{left: 50%;width:319px;transform: translate(-50%, 0%);}
 }
 @media screen and (max-width: 335px) { 
